# microlog

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: API_REFERENCE.md  COOKBOOK.md  DESIGN.md  PORTING_GUIDE.md  TROUBLESHOOTING.md  VERIFICATION.md
include/: mlog.h
src/: mlog.c
tests/: Makefile  test_all.c
tests/cmake/consumer/: CMakeLists.txt  main.c
tests/cmake/consumer_cpp/: CMakeLists.txt  main.cpp
tests/compile/: c11_consumer.c  c99_consumer.c  c99_macro_control_flow.c  c99_macro_no_args.c  check_invalid_config.ps1  check_invalid_config.sh  cpp_consumer.cpp  disabled_macro_no_eval.c  invalid_config_buf_size_zero.c  invalid_config_color_toggle.c  invalid_config_level_min_range.c  invalid_config_max_backends_zero.c  invalid_config_timestamp_toggle.c  level_min_none_consumer.c  max_backends_one_consumer.c  min_buf_size_consumer.c  multi_tu_a.c  multi_tu_b.c  multi_tu_main.c
